--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 dotenv = "0.15.0"
 dotenvy = "0.15.7"
+regex = "1.11.2"
 serde_json = "1.0.143"
 serenity = { version = "0.11", features = ["framework", "standard_framework", "gateway", "client", "model", "rustls_backend"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
