--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "igorrrbot"
+name = "igorrrbot-poise"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 dotenvy = "0.15.7"
+poise = "0.6.1"
 regex = "1.11.2"
-serde_json = "1.0.143"
-serenity = { version = "0.11", features = ["framework", "standard_framework", "gateway", "client", "model", "rustls_backend"] }
-tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
 tokio-postgres = "0.7.13"
